Added files for after login and register
I have commented in header after login file check it

--- a/frontend files/companydashboard.html
+++ b/frontend files/companydashboard.html
@@ -90,18 +90,18 @@
   </div>
 </div>
 <!-- Header end --> <!-- Page Title start -->
-<div class="pageTitle">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-sm-6">
-        <h1 class="page-heading">Company Detail</h1>
-      </div>
-      <div class="col-md-6 col-sm-6">
-        <div class="breadCrumb"><a href="#.">Home</a> / <span>Company Name</span></div>
-      </div>
-    </div>
-  </div>
-</div>
+<!--<div class="pageTitle">-->
+<!--  <div class="container">-->
+<!--    <div class="row">-->
+<!--      <div class="col-md-6 col-sm-6">-->
+<!--        <h1 class="page-heading">Company Detail</h1>-->
+<!--      </div>-->
+<!--      <div class="col-md-6 col-sm-6">-->
+<!--        <div class="breadCrumb"><a href="#.">Home</a> / <span>Company Name</span></div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
 <!-- Page Title End -->
 
 <div class="listpgWraper">
